--- a/.gitignore
+++ b/.gitignore
@@ -100,8 +100,12 @@ Thumbs.db
 _freeze/
 
 
+
 # Rendered output (be selective)
-*.html
+
+# *.html
+!header.html       # Exception - let this one through to repo
 !vignettes/*.html  # Exception - keep vignette HTML
-.Rproj.user
-.quarto
+!giscus.html       # Exception - site commenting engine
+
+
